<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.webprog26.taskresources.MainActivity">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/chbControl"
       android:layout_marginBottom="@dimen/activity_horizontal_margin"
       android:background="@drawable/radial_gradient">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenSize"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/screen_size"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenDensity"
           android:layout_below="@+id/tvScreenSize"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/screen_density"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenOrientation"
           android:layout_below="@+id/tvScreenDensity"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/screen_orientation"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenLocale"
           android:layout_below="@id/tvScreenOrientation"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/locale"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenMode"
           android:layout_below="@id/tvScreenLocale"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/mode"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/tvScreenTouch"
           android:layout_below="@id/tvScreenMode"
           android:textColor="@color/colorBlack"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:layout_marginBottom="6dp"
           android:text="@string/touch_mode"/>
   </RelativeLayout>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chbControl"
        android:layout_above="@+id/btnControl"
        android:text="@string/dis_button"
        android:checked="false"
        style="@style/CustomCheckBoxStyle"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnControl"
        android:text="@string/dis_checkbox"
        style="@style/CustomButtonStyle"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
