<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radial_gradient">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/captain_spoke"
        android:id="@+id/captainSpoke"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:contentDescription=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenSize"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/screen_size"
        android:layout_below="@+id/captainSpoke"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenDensity"
        android:layout_below="@+id/tvScreenSize"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/screen_density"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenOrientation"
        android:layout_below="@+id/tvScreenDensity"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/screen_orientation"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenLocale"
        android:layout_below="@id/tvScreenOrientation"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/locale"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenMode"
        android:layout_below="@id/tvScreenLocale"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/mode"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvScreenTouch"
        android:layout_below="@id/tvScreenMode"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:text="@string/touch_mode"/>
</RelativeLayout>
</ScrollView>